# juniperSPH

./: .gitignore  CMakeLists.txt  kernel.cpp  main.cpp
.github/workflows/: codeql.yml
notebooks/: sarracen_test.py
src/: CMakeLists.txt  ParticleSet.cpp  ParticleSet.h  SimData.cpp  SimData.h  Simulation.cpp  Simulation.h  TreeNode.cpp  TreeNode.h  kernel.cpp  kernel.h
tests/: CMakeLists.txt  test_density.cpp  test_io.cpp  test_kernel.cpp  test_neighbours.cpp  test_reading.cpp
tests/files/: hydro32.toml  kd_test.csv  test.csv
